--- a/src/components/ProjectSection/projectSection.module.css
+++ b/src/components/ProjectSection/projectSection.module.css
@@ -11,21 +11,24 @@
   margin-bottom: 24px;
   grid-column: 1 / -1;
 }
-
+.linkToProject {
+  -webkit-transform: translate3D(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
 .overlayContainer {
   position: relative;
   text-decoration: none;
   overflow: hidden;
   border-radius: 16px;
+  -webkit-transform: translate3D(0, 0, 0);
+  transform: translate3d(0, 0, 0);
 }
 
 .projectImage {
-  display: block;
-  border-radius: 16px;
   object-fit: contain;
   width: 100%;
   height: 250px;
-  transition: all 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out;
   background-color: #333;
 }
 .linkToProject:hover .projectImage {
